<resources>
    <string name="app_name">M.E. Trends</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signupRegister">Register</string>
    <string name="signup"> Sign Up</string>
    <string name="signupAHA">Already have an account?</string>
    <string name="email">E-mail</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="ep_name">Energy provider name</string>
    <string name="password">********</string>
    <string name="login">Login</string>
    <string name="login_FP">Forgot Password?</string>
    <string name="login_DHA">Don\'t have an account? </string>
    <string name="btnFacebook">Facebook</string>
    <string name="btnGoogle">Google</string>
    <string name="logo">logo</string>
    <string name="default_input">Input</string>
    <string name="passwordReset">Password Reset</string>
    <string name="btnPassReset">Reset</string>
    <string name="back2login">Login/Sign-Up</string>
    <string name="inputpassword">password</string>
    <string name="inputConfirmPass">Confirm password</string>
    <string name="my_meters">My meters</string>
    <string name="home">Home</string>
    <string name="my_devices">My devices</string>
    <string name="dashboard">Dashboard</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M.E. Trends</string>
    <string name="nav_header_subtitle">me.trends@etu.he2b.be</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_ep">Energy Provider</string>
    <string name="device_models">Device models</string>
    <string name="log_out">Log out</string>
    <string name="loading">Loading…</string>
    <string name="energy_provider">Energy Provider</string>
    <string name="first_name_last_name">Firstname Lastname</string>
    <string name="street_name_house_number">Street, house number</string>
    <string name="city_postal_code">City, Postcode</string>
    <string name="region_country">Region, Country</string>
    <string name="update">Update</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="edit">Edit</string>
    <string name="profile_update">Profile Update</string>
    <string name="comma_separator">,</string>
    <string name="Image_meter">METER</string>
    <string name="submit">Submit</string>
    <string name="you_have_no_devices">You have no devices</string>
    <string name="my_device">My device</string>
    <string name="name">Name:</string>
    <string name="device_name">Device names should be unique</string>
    <string name="hours_used_day">Hours used/day: </string>
    <string name="_0">0</string>
    <string name="power_rating_w">Power rating (W):</string>
    <string name="number_of_devices">Number of devices</string>
    <string name="number">Number:</string>
    <string name="cost_watt_eur">Cost/Watt (€)</string>
    <string name="please_update_e_provider_settings">Please update e-provider settings</string>
    <string name="cost_day">Cost/Day (€)</string>
    <string name="delete">Delete</string>
    <string name="deleted_device">Successfully deleted Device</string>
    <string name="updated_device">Successfully updated device</string>
    <string name="updated_client">Successfully updated client information</string>
    <string name="created_device">Successfully created device</string>
    <string name="device_def">Device definition</string>
    <string name="invoices">Invoices</string>
    <string name="please_add_an_invoice">Please add an invoice</string>
    <string name="undefined">undefined</string>
    <string name="gas_yearly_consumption">Gas yearly consumption:</string>
    <string name="not_yet_defined">Not yet defined</string>
    <string name="electric_yearly_consumption">Electric yearly consumption:</string>
    <string name="water_yearly_consumption">Water yearly consumption:</string>
    <string name="invoice_details">Invoice details</string>
    <string name="start_date">Start date:</string>
    <string name="_2021_01_01">2021/01/01</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="end_date">End date:</string>
    <string name="kwh">KWh</string>
    <string name="cubic_meters_m3">cubic meters (m3)</string>
    <string name="consumption_charge_eur">Consumption charge (€)</string>
    <string name="eur">EUR</string>
    <string name="euro">€</string>
    <string name="eur_an">0.0 (€/An)</string>
    <string name="c_kwh">0.0 (c€/kWh)</string>
    <string name="save">Save</string>
    <string name="user_stats">User Stats</string>
    <string name="updated_ep_name">Successfully updated Energy Provider name</string>
    <string name="added_invoice">Successfully added new invoice</string>
    <string name="removed_invoice">Successfully removed invoice</string>
    <string name="ep_details">Energy provider details</string>
    <string name="meters">Meters</string>
    <string name="you_have_no_meters">You have no meters</string>
    <string name="select_m_type">Select meter type</string>
    <string name="water_meter">Water Meter</string>
    <string name="gas_meter">Gas Meter</string>
    <string name="electric_meter">Electric Meter</string>
    <string name="created_meter">Successfully created Meter</string>
    <string name="meter_name">Meter name</string>
    <string name="label_meter_records">Meter Records</string>
</resources>