<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tech.mobile.met.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_editClientFragment"
            app:destination="@id/editClientFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_mydevices"
        android:name="tech.mobile.met.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_nav_ep_to_editDevicesFragment"
            app:destination="@id/editDevicesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_mydevices_self"
            app:destination="@id/nav_mydevices"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_energy_provider"
        android:name="tech.mobile.met.ui.energy_provider.EnergyProviderFragment"
        android:label="@string/menu_ep"
        tools:layout="@layout/fragment_energy_provider" >
        <action
            android:id="@+id/action_nav_energy_provider_to_editEpFragment"
            app:destination="@id/editEpFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_energy_provider_self"
            app:destination="@id/nav_energy_provider"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/editClientFragment"
        android:name="tech.mobile.met.ui.home.EditClientFragment"
        android:label="@string/profile_update"
        tools:layout="@layout/fragment_edit_client" >
        <action
            android:id="@+id/action_editClientFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_editClientFragment_self"
            app:destination="@id/editClientFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/editDevicesFragment"
        android:name="tech.mobile.met.ui.devices.EditDevicesFragment"
        android:label="@string/device_def"
        tools:layout="@layout/fragment_edit_devices">
        <action
            android:id="@+id/action_editDevicesFragment_to_nav_ep"
            app:destination="@id/nav_mydevices"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="device_name"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editEpFragment"
        android:name="tech.mobile.met.ui.energy_provider.EditEpFragment"
        android:label="@string/ep_details"
        tools:layout="@layout/fragment_edit_ep" >
        <argument
            android:name="invoice_date"
            app:argType="string" />
        <action
            android:id="@+id/action_editEpFragment_to_nav_energy_provider"
            app:destination="@id/nav_energy_provider"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_meters"
        android:name="tech.mobile.met.ui.meters.MetersFragment"
        android:label="@string/meters"
        tools:layout="@layout/fragment_meters" >
        <action
            android:id="@+id/action_nav_meters_to_detailsMetersFragment"
            app:destination="@id/detailsMetersFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_meters_self"
            app:destination="@id/nav_meters"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/detailsMetersFragment"
        android:name="tech.mobile.met.ui.meters.DetailsMetersFragment"
        android:label="@string/label_meter_records"
        tools:layout="@layout/fragment_details_meters" >
        <argument
            android:name="meter_name"
            app:argType="string" />
        <action
            android:id="@+id/action_detailsMetersFragment_to_nav_meters"
            app:destination="@id/nav_meters"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_detailsMetersFragment_self"
            app:destination="@id/detailsMetersFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="tech.mobile.met.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>