<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/back9">

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupRegister"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_met"
        android:drawableStart="@drawable/ic_alternate_email_24"
        android:drawablePadding="@dimen/custom_input_padding1"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="@dimen/custom_input_padding2"
        android:paddingTop="@dimen/custom_input_padding1"
        android:paddingEnd="@dimen/custom_input_padding1"
        android:paddingBottom="@dimen/custom_input_padding1"
        android:textColor="@color/white"
        android:textColorHint="@color/material_dynamic_neutral_variant80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_met"
        android:drawableStart="@drawable/ic_security_24"
        android:drawablePadding="@dimen/custom_input_padding1"
        android:ems="10"
        android:hint="@string/inputpassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="@dimen/custom_input_padding2"
        android:paddingTop="@dimen/custom_input_padding1"
        android:paddingEnd="@dimen/custom_input_padding1"
        android:paddingBottom="@dimen/custom_input_padding1"
        android:textColor="@color/white"
        android:textColorHint="@color/material_dynamic_neutral_variant80"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_met"
        android:drawableStart="@drawable/ic_security_24"
        android:drawablePadding="@dimen/custom_input_padding1"
        android:ems="10"
        android:hint="@string/inputConfirmPass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="@dimen/custom_input_padding2"
        android:paddingTop="@dimen/custom_input_padding1"
        android:paddingEnd="@dimen/custom_input_padding1"
        android:paddingBottom="@dimen/custom_input_padding1"
        android:textColor="@color/white"
        android:textColorHint="@color/material_dynamic_neutral_variant80"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_met_round"
        android:text="@string/signupRegister"
        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

    <TextView
        android:id="@+id/back2login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signupAHA"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <ProgressBar
        android:id="@+id/registerProgressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/back2login"
        app:layout_constraintStart_toStartOf="@+id/back2login"
        app:layout_constraintTop_toBottomOf="@+id/back2login"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>